feat: prototype (WIP)
