# src/app.ts
@@ -1,7 +1,7 @@
 import express from 'express';
 import helmet from 'helmet';
-import { userRoutes } from './routes/user.routes.js';
 import { healthRoutes } from './routes/health.routes.js';
+import { onboardingRoutes } from './routes/onboarding.routes.js';
 import { errorHandler } from './middlewares/errorHandler.js';
 import swaggerUi from 'swagger-ui-express';
 import YAML from 'yamljs';
@@ -18,7 +18,7 @@ const swaggerDocument = YAML.load(swaggerPath);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 app.use(healthRoutes);
-app.use('/api/v1/users', userRoutes);
+app.use('/api/v1', onboardingRoutes);
 app.use(errorHandler);
 
 export default app;
